fix search icon spacing + header size

--- a/public/user.css
+++ b/public/user.css
@@ -58,7 +58,7 @@ html {
 }
 
 .header h1 {
-  font-size: 60px;
+  font-size: 70px;
   color: #4C5C5C;
   font-family: "Title";
   margin: 10px 0 30px;
@@ -97,6 +97,7 @@ html {
 }
 
 .icons {
+  padding-left: 80px;
   display: flex;
   gap: 20px;
   font-size: 24px;
